fixed modal z-index and updated register page

--- a/src/App.css
+++ b/src/App.css
@@ -178,6 +178,7 @@ h4 {
 
 .diagramcontainer {
   position: relative;
+  z-index: 0;
 }
 
 .tooltip {
